# ali-perf-tests

./: .gitmodules  CMakeLists.txt  README.md
perf_tests/: CMakeLists.txt
perf_tests/ant-2-10km/: CMakeLists.txt  input_pop.yaml  input_vel_cheby.yaml  input_vel_cpu.yaml  input_vel_gpu.yaml  input_vel_lsgs.yaml
perf_tests/ant-2-20km/: CMakeLists.txt  input_albany_ML_LineSmoothing.yaml  input_albany_MueLu_DecoupledLineSmoothing.yaml  input_albany_MueLu_LineSmoothing.yaml  input_albany_PopulateMesh.yaml  input_albany_ml_LineSmoothing.yaml  input_albany_muelu_DecoupledLineSmoothing.yaml  input_albany_muelu_LineSmoothing.yaml  input_albany_short.yaml
perf_tests/ant-4-20km/: CMakeLists.txt  input_vel_cheby.yaml  input_vel_cpu.yaml  input_vel_gpu.yaml  input_vel_lsgs.yaml
perf_tests/ant-8-30km/: CMakeLists.txt  input_pop.yaml  input_popvel.yaml  input_vel_cheby_adjt.yaml  input_vel_cheby_fixt.yaml  input_vel_lsbj.yaml  input_vel_lsgs.yaml  input_veldep.yaml  input_velopt.yaml
perf_tests/ant-struct/: CMakeLists.txt
perf_tests/green-1-10km/: CMakeLists.txt  input_albany_Enthalpy_FiniteElementAssembly_Memoization.yaml  input_albany_Enthalpy_FiniteElementAssembly_Memoization_Tetrahedron.yaml  input_albany_Enthalpy_FiniteElementAssembly_Memoization_Wedge.yaml  input_albany_Enthalpy_FiniteElementAssembly_SingleWorkset_Tetrahedron.yaml  input_albany_Enthalpy_FiniteElementAssembly_SingleWorkset_Wedge.yaml  input_albany_Enthalpy_MueLu.yaml  input_albany_Enthalpy_MueLuKokkos.yaml  input_albany_Enthalpy_MueLuKokkos_Tetrahedron.yaml  input_albany_Enthalpy_MueLu_Tetrahedron.yaml  input_albany_Enthalpy_MueLu_Wedge.yaml  input_albany_Enthalpy_PopulateMesh_Tetrahedron.yaml  input_albany_Enthalpy_PopulateMesh_Wedge.yaml  input_albany_PopulateMesh.yaml  input_albany_PopulateMesh_Tetrahedron.yaml  input_albany_PopulateMesh_Wedge.yaml  input_albany_Velocity_MueLu.yaml  input_albany_Velocity_MueLuKokkos.yaml  input_albany_Velocity_MueLuKokkos_Tetrahedron.yaml  input_albany_Velocity_MueLu_Tetrahedron.yaml  input_albany_Velocity_MueLu_Tune.yaml  input_albany_Velocity_MueLu_Wedge.yaml  input_albany_Velocity_MueLu_Wedge_Tune.yaml  input_albany_Velocity_PopulateMesh_Tetrahedron.yaml  input_albany_Velocity_PopulateMesh_Wedge.yaml  input_pop.yaml  input_vel_cheby.yaml  input_vel_cpu.yaml  input_vel_gpu.yaml
perf_tests/green-1-7km/: CMakeLists.txt  input_albany_FiniteElementAssembly_Memoization.yaml  input_albany_FiniteElementAssembly_SingleWorkset.yaml  input_albany_ML_LineSmoothing_Memoization.yaml  input_albany_ML_LineSmoothing_SingleWorkset.yaml  input_albany_MueLuKokkos_LineSmoothing_Memoization.yaml  input_albany_MueLu_DecoupledLineSmoothing_Memoization.yaml  input_albany_MueLu_DecoupledLineSmoothing_SingleWorkset.yaml  input_albany_MueLu_LineSmoothing_Memoization.yaml  input_albany_MueLu_LineSmoothing_SingleWorkset.yaml  input_albany_PopulateMesh.yaml
perf_tests/green-3-20km/: CMakeLists.txt  input_albany_BasalFrictionInit_Memoization.yaml  input_albany_BasalFrictionInit_MemoizationForParams.yaml  input_albany_BasalFrictionInit_SingleWorkset.yaml  input_albany_Enthalpy_FiniteElementAssembly_Memoization.yaml  input_albany_Enthalpy_FiniteElementAssembly_Memoization_Tetrahedron.yaml  input_albany_Enthalpy_FiniteElementAssembly_Memoization_Wedge.yaml  input_albany_Enthalpy_FiniteElementAssembly_SingleWorkset.yaml  input_albany_Enthalpy_MueLuKokkos.yaml  input_albany_Enthalpy_MueLuKokkos_Wedge.yaml  input_albany_Enthalpy_MueLuKokkos_Wedge_Tune.yaml  input_albany_Enthalpy_PopulateMesh_Tetrahedron.yaml  input_albany_Enthalpy_PopulateMesh_Wedge.yaml  input_albany_PopulateMesh.yaml  input_albany_PopulateMesh_Tetrahedron.yaml  input_albany_PopulateMesh_Wedge.yaml  input_albany_Velocity_FiniteElementAssembly_Memoization.yaml  input_albany_Velocity_FiniteElementAssembly_Memoization_Tetrahedron.yaml  input_albany_Velocity_FiniteElementAssembly_Memoization_Wedge.yaml  input_albany_Velocity_FiniteElementAssembly_SingleWorkset.yaml  input_albany_Velocity_MueLu.yaml  input_albany_Velocity_MueLuKokkos.yaml  input_albany_Velocity_MueLuKokkos_Wedge.yaml  input_albany_Velocity_MueLuKokkos_Wedge_Tune.yaml  input_albany_Velocity_MueLu_Wedge.yaml  input_albany_Velocity_MueLu_Wedge_Tune.yaml  input_albany_Velocity_PopulateMesh_Tetrahedron.yaml  input_albany_Velocity_PopulateMesh_Wedge.yaml  input_ent.yaml  input_ent_fea.yaml  input_ent_gs.yaml  input_pop.yaml  input_vel_cheby.yaml  input_vel_cpu.yaml  input_vel_fea.yaml  input_vel_gpu.yaml  input_vel_lsgs.yaml
perf_tests/humboldt-1-10km/: CMakeLists.txt  input_albany_Coupled_FROSch.yaml  input_albany_Coupled_FROSch_Wedge.yaml  input_albany_Coupled_FiniteElementAssembly.yaml  input_albany_Coupled_FiniteElementAssembly_Wedge.yaml  input_albany_Coupled_Ifpack2.yaml  input_albany_Coupled_Ifpack2_Wedge.yaml  input_albany_Enthalpy_MueLu.yaml  input_albany_Enthalpy_MueLu_Wedge.yaml  input_albany_PopulateMesh.yaml  input_albany_PopulateMesh_Wedge.yaml  input_albany_Velocity_MueLu.yaml  input_albany_Velocity_MueLu_Wedge.yaml  input_cop_fea.yaml  input_cop_fro_cpu.yaml  input_cop_fro_gpu.yaml  input_cop_fro_slu.yaml  input_cop_fro_tch.yaml  input_cop_if2_slu.yaml  input_cop_if2_tch.yaml  input_cop_tko_cpu.yaml  input_cop_tko_fro_cpu.yaml  input_cop_tko_fro_gpu.yaml  input_cop_tko_gpu.yaml  input_cop_tko_mlu_cpu.yaml  input_cop_tko_mlu_fro_cpu.yaml  input_cop_tko_mlu_fro_gpu.yaml  input_cop_tko_mlu_gpu.yaml  input_ent_cpu.yaml  input_ent_fea.yaml  input_ent_gpu.yaml  input_ent_lsgs.yaml  input_pop.yaml  input_vel_cpu.yaml  input_vel_fea.yaml  input_vel_gpu.yaml
perf_tests/humboldt-3-20km/: CMakeLists.txt  input_albany_PopulateMesh.yaml  input_albany_PopulateMesh_Wedge.yaml  input_albany_Velocity_MueLu.yaml  input_albany_Velocity_MueLuKokkos.yaml  input_albany_Velocity_MueLuKokkos_Wedge.yaml  input_albany_Velocity_MueLu_Tune.yaml  input_albany_Velocity_MueLu_Wedge.yaml  input_albany_Velocity_MueLu_Wedge_Tune.yaml  input_pop.yaml  input_vel_cpu.yaml  input_vel_gpu.yaml  input_vel_gs.yaml  input_vel_lsgs.yaml
perf_tests/mali-ais4km/: CMakeLists.txt  albany_input_cpu.yaml  (+2 more)
(+136 files in other folders)
