IF (ALIPT_BUILD_BLAKE)
  #add_subdirectory(ant-2-10km) # Too much memory (1 node)
  add_subdirectory(ant-4-20km)
  add_subdirectory(ant-8-30km)
  add_subdirectory(ant-struct)
  add_subdirectory(green-1-10km)
  add_subdirectory(green-3-20km)
  add_subdirectory(humboldt-1-10km)
  add_subdirectory(mali-ais4km)
  add_subdirectory(mali-ais8km)
  add_subdirectory(thwaites-1-10km)
ELSEIF (ALIPT_BUILD_WEAVER)
  #add_subdirectory(ant-4-20km) # Too much memory (1 node)
  add_subdirectory(ant-8-30km)
  #add_subdirectory(ant-struct) # Too much memory (1 node)
  #add_subdirectory(green-1-10km) # Too much memory (1 node)
  add_subdirectory(green-3-20km)
  add_subdirectory(humboldt-1-10km)
  add_subdirectory(mali-ais8km)
ENDIF()

